Implementacion de la quiery dynamicas en los servi
Ahora registroJuego, Eventos, participantes tienen queryDynamicas.